--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -11,9 +11,11 @@ $bondi_blue: #02A8B2;
 $layout-blue: #1898cd;
 $deep-cerulean: #0077B6;
 $dark-blue: #0a346e;
+$alto: #d6d6d6;
 $light_grey: #999999;
 $text-alternate: #9b9b9b;
 $gray: #929090;
+$dove-gray: #646464;
 $color-primary: #879AA8;
 $regent-gray: #8799A7;
 $bali-hai: #8999a9;
