--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -2,3 +2,4 @@
 @import "../styles/base/variables";
 @import "../styles/base/buttons";
 @import "../styles/base/profile";
+@import "../styles/base/select";
