--- a/src/app/pages/article/components/article-media/article-media.component.html
+++ b/src/app/pages/article/components/article-media/article-media.component.html
@@ -3,7 +3,7 @@
     <li>Education /</li>
     <li>Practice Management</li>
   </ul>
-  <dsod-rating></dsod-rating>
+  <dsod-rating [rating]="content.avgCommentRating"></dsod-rating>
 </div>
 <div class="article-header" *ngIf="content">
   <div class="row">
