--- a/src/app/shared/components/topic/topic.component.html
+++ b/src/app/shared/components/topic/topic.component.html
@@ -2,12 +2,12 @@
   <div class="feautred-block feautred-block-sm" [ngClass]="{'bg-none':styleFor=='sponsored','feautred-block-lg':styleFor=='content-large'}">
     <div class="feautred-block-header" *ngIf="showHeader">
       <h4>{{topic.categoryName}}</h4>
-      <dsod-rating></dsod-rating>
+      <dsod-rating [rating]="topic.avgCommentRating"></dsod-rating>
     </div>
     <div class="feautred-block-thumbnail" *ngIf="topic.featuredMediaId && showImage">
-      <img src="https://devcmsapi1.dsodentist.com/content/contentservice/v1/file/downloadFileByObjectId?objectId={{topic.featuredMediaId}}"
-        class="img-fluid" alt="Feautred Thumbnail Large">
-      <a href="javascript:void(0)" class="read-about">
+      <a href="javascript:void(0)" (click)="navigateTo(topic)"><img src="https://devcmsapi1.dsodentist.com/content/contentservice/v1/file/downloadFileByObjectId?objectId={{topic.featuredMediaId}}"
+          class="img-fluid" alt="Feautred Thumbnail Large"></a>
+      <a href="javascript:void(0)" class="read-about" (click)="navigateTo(topic)">
         <img *ngIf="topic.contentTypeName=='Articles'" src="assets/images/article-icon.png" alt="">
         <img *ngIf="topic.contentTypeName=='Videos'" src="assets/images/youtube-icon.png" alt="">
         <img *ngIf="topic.contentTypeName=='Podcasts'" src="assets/images/podcast-icon.png" alt="">
