--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -129,7 +129,7 @@
               color: $color-white;
 
               &:hover {
-                background-color: #ffffff33;
+                background-color: rgba(255, 255, 255, 0.2);
               }
             }
           }
