--- a/src/app/layout/profile/profile-panel/profile-panel.component.scss
+++ b/src/app/layout/profile/profile-panel/profile-panel.component.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 .profile-panel-container {
   position: relative;
   width: 100%;
@@ -9,7 +11,7 @@
     width: 400px;
     min-height: 500px;
     z-index: 9;
-    background-color: #3d3f39cc;
+    background-color: $kelp-8;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     transition: ease right 500ms;
