--- a/src/app/pages/auth/signup/signup.component.scss
+++ b/src/app/pages/auth/signup/signup.component.scss
@@ -136,7 +136,7 @@
         align-items: center;
         justify-content: center;
         .btn-login {
-          background-color: #ffffff4d;
+          background-color: $color-white-3;
           margin: 0 10px;
           width: 140px;
         }
