--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -1,4 +1,5 @@
 $color-white: #ffffff;
+$color-white-3: rgba(255, 255, 255, 0.3);
 $alabaster_white: #f8f8f8;
 $color-strokes: #e9edf1;
 $dropdown_grey: #ebebeb;
@@ -22,6 +23,8 @@ $bali-hai: #8999a9;
 $boulder_grey: #7D7C7C;
 $color-secondary: #5E6E7A;
 $text-main: #4a4a4a;
+$kelp: #3d3f39;
+$kelp-8: rgba(61, 63, 57, 0.8);
 $dark_grey: #363636;
 $mine_grey: #333333;
 $emulsion-grey: #191919;
