--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div class="nav-wrapper">
+<div class="nav-wrapper" onScroll-update>
   <div class="container-fluid">
     <div class="d-flex justify-content-between">
 
