--- a/src/app/pages/home/components/podcasts-by/podcasts-by.component.html
+++ b/src/app/pages/home/components/podcasts-by/podcasts-by.component.html
@@ -3,12 +3,12 @@
     <h4>Orthodontics</h4>
   </div>
   <div class="podcast-block-thumbnail">
-    <img src="assets/images/orthodontics-avi.png" class="img-fluid" alt="Feautred Thumbnail Large">
+    <img src={{author.imageUrl}} class="img-fluid" alt="Feautred Thumbnail Large">
     <div class="podcasts-block-caption">
       <h4>Treatment of Type III Sockets</h4>
     </div>
   </div>
   <div class="podcast-block-content">
-    <h3>Christina Calleros, RDH, MS</h3>
+    <h3>{{author.name}}, RDH, MS</h3>
   </div>
 </div>
