--- a/src/app/layout/profile/profile-edit-view/profile-edit-view.component.scss
+++ b/src/app/layout/profile/profile-edit-view/profile-edit-view.component.scss
@@ -19,6 +19,11 @@
           &:last-child {
             margin-bottom: 0;
           }
+          .icon-body-item {
+            &.upload-resume-background {
+              background-color: $color-alert;
+            }
+          }
           .item-content {
             border-bottom: none;
             .title {
