--- a/src/assets/styles/base/_profile.scss
+++ b/src/assets/styles/base/_profile.scss
@@ -119,6 +119,7 @@
               justify-content: center;
               width: 40px;
               height: 40px;
+              flex: 0 0 40px;
               &.gray-background {
                 background-color: $bali-hai;
               }
