- implemented getProfileOptionTypes func

--- a/src/app/layout/profile/profile-edit-view/profile-edit-view.component.html
+++ b/src/app/layout/profile/profile-edit-view/profile-edit-view.component.html
@@ -103,7 +103,10 @@
             </div>
           </div>
           <div class="add-new-item-container">
-            <dsod-add-new-experience [show]="isAddNewExperience"></dsod-add-new-experience>
+            <dsod-add-new-experience
+              [show]="isAddNewExperience"
+            >
+            </dsod-add-new-experience>
           </div>
         </div>
         <ng-template #noExperience>
