--- a/src/assets/styles/base/_profile.scss
+++ b/src/assets/styles/base/_profile.scss
@@ -141,6 +141,14 @@
               }
             }
           }
+          .add-new-item-container {
+            .new-item-container {
+              padding-bottom: 10px;
+              .title {
+                font-size: 16px;
+              }
+            }
+          }
         }
       }
     }
