--- a/src/app/shared/components/add-new-experience/add-new-experience.component.html
+++ b/src/app/shared/components/add-new-experience/add-new-experience.component.html
@@ -1,7 +1,44 @@
 <div class="add-new-ex-container" [ngClass]="{'show': show}">
-  <p>
-    add-new-experience works!
-  </p>
-  <p>abc</p>
+  <div class="new-item-container">
+    <p class="title">Practice Type</p>
+    <div class="item-body">
+      <ng-select
+        class="custom-select"
+        [items]="practiceTypes"
+        appendTo="body"
+        bindLabel="name"
+        bindValue="id"
+        class="select-item"
+        placeholder="Select Practice type">
+      </ng-select>
+    </div>
+  </div>
+  <div class="new-item-container">
+    <p class="title">Role at Practice</p>
+    <div class="item-body">
+      <ng-select
+        class="custom-select"
+        [items]="practiceRoles"
+        appendTo="body"
+        bindLabel="name"
+        bindValue="id"
+        class="select-item"
+        placeholder="Select Speciality">
+      </ng-select>
+    </div>
+  </div>
+  <div class="new-item-container">
+    <p class="title">Name of Dental Support Organization (DSO)</p>
+    <div class="item-body">
+      <ng-select
+        class="custom-select"
+        [items]="practiceDSOs"
+        appendTo="body"
+        bindLabel="name"
+        bindValue="id"
+        class="select-item"
+        placeholder="Select Speciality">
+      </ng-select>
+    </div>
+  </div>
 </div>
-
