--- a/src/app/shared/components/add-new-experience/add-new-experience.component.html
+++ b/src/app/shared/components/add-new-experience/add-new-experience.component.html
@@ -41,4 +41,42 @@
       </ng-select>
     </div>
   </div>
+  <div class="new-item-container flex-container">
+    <p class="title">I currently work in this role</p>
+    <div class="item-body">
+      <ui-switch size="small"></ui-switch>
+    </div>
+  </div>
+  <div class="new-item-container flex-container">
+    <div class="date-picker-container">
+      <span class="title">From</span>
+      <div class="input-group date-control">
+        <input
+          class="input-date-time"
+          [container]="'body'"
+          placeholder="yyyy-mm-dd"
+          name="dp"
+          ngbDatepicker
+          #from="ngbDatepicker">
+        <div class="icon-calendar-wrap">
+          <img class="icon-calendar" src="./assets/images/icons/icon-calendar.png" (click)="from.toggle()">
+        </div>
+      </div>
+    </div>
+    <div class="date-picker-container">
+      <span class="title">To</span>
+      <div class="input-group date-control">
+        <input
+          class="input-date-time"
+          [container]="'body'"
+          placeholder="yyyy-mm-dd"
+          name="dp"
+          ngbDatepicker
+          #to="ngbDatepicker">
+        <div class="icon-calendar-wrap">
+          <img class="icon-calendar" src="./assets/images/icons/icon-calendar.png" (click)="to.toggle()">
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
