--- a/src/app/shared/components/add-new-experience/add-new-experience.component.scss
+++ b/src/app/shared/components/add-new-experience/add-new-experience.component.scss
@@ -5,4 +5,40 @@
   &.show {
     max-height: 500px;
   }
+
+  .flex-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    .title {
+      margin: 0;
+    }
+    .date-control {
+      padding: 0 10px;
+      .input-date-time {
+        width: 1%;
+        padding: 5px 10px;
+        background-color: transparent;
+        border: none;
+        flex: 1 1 auto;
+        border: none;
+        background-color: transparent;
+        color: #ffffff;
+        padding: 0;
+        outline: none;
+        min-height: 25px;
+        border-bottom: 1px solid #929090;
+        &::placeholder {
+          color: #929090;
+        }
+      }
+      .icon-calendar-wrap {
+        display: flex;
+        align-items: center;
+        padding: 5px;
+        cursor: pointer;
+      }
+    }
+  }
 }
+
