--- a/src/app/shared/components/add-new-residency/add-new-residency.component.html
+++ b/src/app/shared/components/add-new-residency/add-new-residency.component.html
@@ -1,5 +1,23 @@
 <div class="add-new-residency-container" [ngClass]="{'show': show}">
-  <p>
-    add-new-residency works!
-  </p>
+  <div class="new-item-container">
+    <p class="title">Residency at</p>
+    <div class="item-body">
+      <ng-select
+        class="custom-select"
+        [items]="residencyList"
+        appendTo="body"
+        bindLabel="name"
+        bindValue="id"
+        class="select-item"
+        placeholder="Select Residency">
+      </ng-select>
+    </div>
+  </div>
+  <div class="new-item-container">
+    <span class="title">Year of Completion</span>
+    <div class="input-group">
+      <input type="text">
+      <span class="fa fa-pencil"></span>
+    </div>
+  </div>
 </div>
