integrated addreview findAllReviews and author endpoint

--- a/src/app/pages/article/containers/article-page/article.component.html
+++ b/src/app/pages/article/containers/article-page/article.component.html
@@ -26,7 +26,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-lg-9">
-    <dsod-article-reviews></dsod-article-reviews>
+  <div class="col-lg-9" *ngIf="isLoggedIn">
+    <dsod-article-reviews [content]="pageContent$ | async"></dsod-article-reviews>
   </div>
 </div>
