--- a/src/app/shared/components/audio-player/audio-player.component.html
+++ b/src/app/shared/components/audio-player/audio-player.component.html
@@ -1,4 +1,7 @@
-<div class="podcast-player" *ngIf="content">
+<ng-template #l>
+  Loading
+</ng-template>
+<div class="podcast-player" *ngIf="isLoading; let l else loaded">
   <div class="visualizer">
     <div class="row">
       <div class="col-md-8">
